@@ -72,7 +72,6 @@ obstack
 openat-safer
 perl
 propername
-quote
 rawmemchr
 readme-release
 realloc-gnu
